--- a/core/templates/curso_bd.html
+++ b/core/templates/curso_bd.html
@@ -58,11 +58,12 @@
 							<div class="content">
 								<header>
 									<h2>Banco de Dados</h2>
-								</header>
+								</header> 
+								<p> <strong> Duração do curso: </strong> 2 anos </p> 
 								<p>Neste curso, o aluno será preparado para atuar com diversas plataformas e estruturas de desenvolvimento e administração de sistemas  de Banco de Dados. <br> 
 								<p>Esta graduação frisa a importância da segurança de compartilhamento de dados nas empresas modernas e o aluno aprende as melhores técnicas e ferramentas de criação e implementação das mesmas.<br> 
 								<h3>Mercado de trabalho</h3>
-								<p>Pelo fato de, hoje em dia, as empresas utilizarem algum sistema informatizado, sempre terão a necessidade de um profissional para administrá-lo. Com isso, o mercado de trabalho para esta área se mantém aquecido, com uma demanda muito alta por profissionais qualificados. Na maioria das vezes, garante ótimas remunerações.</p>
+								<p>Atualmente, as empresas utilizam algum sistema informatizado e sempre terão a necessidade de um profissional para administrá-lo. Com isso, o mercado de trabalho para esta área se mantém aquecido, com uma demanda muito alta por profissionais qualificados. Na maioria das vezes, garante ótimas remunerações.</p>
 								<p>Dependendo da formação e do tempo de experiência, este profissional poderá assumir diferentes cargos em empresas dos mais diversos setores. Veja alguns exemplos: Administrador de Banco de Dados (DBA), Consultor de Banco de Dados, Analista de Dados, Analista de Suporte, Desenvolvedor de Projetos de Banco de Dados e Gerente de Sistemas de Bancos de Dados.</p>
 							</div>
 						</div>
