--- a/core/templates/curso_engenharia.html
+++ b/core/templates/curso_engenharia.html
@@ -59,8 +59,9 @@
 						<div class="inner">
 							<div class="content">
 								<header>
-									<h2> Engenharia da Computação</h2>
-								</header>
+									<h2> Engenharia da Computação </h2>
+								</header> 
+								<p> <strong> Duração do curso: </strong> 4 anos </p> 
 								<p>O aluno será capacitado para desenvolver sistemas para Internet das Coisas e Indústria 4,0 a partir de sólidos conhecimentos de programação, redes de comunicação, hardware e eletrônica que são foco de várias disciplinas da grade. Além disso, temas como Inovação, Empreendedorismo, Gestão e Economia também farão parte da formação do futuro engenheiro. </p>
 								<p>O curso foi projetado em uma linha de formação com ênfase em IoT e Indústria 4.0, temas atuais e de interesse mundial, todos os setores da economia serão impactados por essas transformações digitais nos próximos anos. </p>
 								<hr />
