--- a/core/templates/curso_gestao.html
+++ b/core/templates/curso_gestao.html
@@ -58,13 +58,13 @@
 							<div class="content">
 								<header>
 									<h2>Curso de Gestão de Projetos</h2>
-								</header>
-								<p>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Magna et cursus lorem faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod tempus. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida lorem ipsum dolor sit amet dolor feugiat consequat. </p>
-								<p>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Magna et cursus lorem faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod tempus. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida lorem ipsum dolor sit amet dolor feugiat consequat. </p>
-								<hr />
-								<h3>Magna odio tempus commodo</h3>
-								<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor. Ante commodo blandit adipiscing integer semper orci eget. Faucibus commodo adipiscing mi eu nullam accumsan morbi arcu ornare odio mi adipiscing nascetur lacus ac interdum morbi accumsan vis mi accumsan ac praesent.</p>
-								<p>Felis sagittis eget tempus primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Magna sed etiam ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus lorem ipsum dolor sit amet nullam.</p>
+								</header> 
+								<p> <strong> Duração do curso: </strong> 2 anos </p>
+								<p>O curso de Gestão de Projetos ou Gerenciamento de Projetos é oferecido como pós-graduação ou especialização. O curso forma profissionais com competência para analisar, entender, gerenciar e otimizar as diversas partes de um projeto. </br>No dia a dia do profissional, é comum ter que lidar com as diversas etapas que constituem um projeto, tais como a análise inicial para definir qual o custo total, qual a matéria prima a ser utilizada e o tempo hábil disponível para a execução. </p>
+								<p>É de sua responsabilidade também, fazer alterações no projeto original, supervisionar as equipes de trabalho e entregar o projeto concluído ao cliente, cuidando da documentação necessária.</br> 
+					                        <p>Após a conclusão do curso, o aluno deverá assegurar que os projetos sob sua supervisão cumpram o prazo estabelecido, utilizando os melhores recursos e métodos sem ultrapassar o orçamento. </p>
+								<h3>O mercado de trabalho</h3>
+								<p>No mercado de trabalho, devido a versatilidade do profissional de Gestão de Projetos, há ofertas nas mais diversas empresas em que suas habilidades possam ser empregadas. Por isso, é possível encontrar o profissional na construção civil, na indústria automobilística e aeronáutica, em escritórios de arquitetura, agências de publicidade e, até mesmo, em grandes cerimoniais.</p>
 							</div>
 						</div>
 					</section>
