--- a/core/templates/curso_adm.html
+++ b/core/templates/curso_adm.html
@@ -58,7 +58,8 @@
 							<div class="content">
 								<header>
 									<h2>Administração</h2>
-								</header>
+								</header> 
+								<p> <strong> Duração do curso: </strong> 4 anos </p> 
 								<p>Voltado para as exigências do mercado de trabalho, o curso de Administração da FANTEC aborda de forma ampla o universo corporativo.<br> 
 									O aluno irá aprender a definir as melhores estratégias para o bom funcionamento das empresas, gerar lucros, controlar gastos e se destacar com qualidade entre os concorrentes.<br>  
 									São funções de um administrador: gerir equipes, negociar com fornecedores, atingir resultados positivos, solucionar diferentes problemas e aumentar a produtividade. <br> </p>
