--- a/core/templates/curso_ads.html
+++ b/core/templates/curso_ads.html
@@ -58,7 +58,8 @@
 							<div class="content">
 								<header>
 									<h2>Análise e Desenvolvimento de Sistemas</h2>
-								</header>
+								</header> 
+								<p> <strong> Duração do curso: </strong> 2 anos </p> 
 								<p>Este curso é voltado para a criação de softwares, sistemas para empresas e programas. <br> 
 									Entre os aprendizados desta graduação também estão as etapas do projeto de sistemas de software, como por exemplo: análise, projeto, teste, gestão, implantação e manutenção de sistemas de informação. O aluno formado pela FANTEC pode atuar no mercado de trabalho como: Analista de desenvolvimento, Analista de teste, Analista de requisitos ou de negócios.</p>
 								<p>O curso Superior de Tecnologia em Análise e Desenvolvimento de Sistemas do FANTEC tem duração de 2,5 anos e concede um diploma de nível superior aos seus concluintes, muito reconhecido no mercado de trabalho. O profissional formado em ADS poderá seguir sua formação continuada, ingressando diretamente no bacharelado em Sistemas de Informação, ou buscar novos conhecimentos em cursos de pós-graduação.</p>
