Troca entre as páginas consertado.

--- a/core/templates/cursos.html
+++ b/core/templates/cursos.html
@@ -17,7 +17,7 @@
 
 		<!-- Header-->
 			<header id="header" style="background-color:brown;">
-				<a class="logo" href="index">Faculdade Nacional de Tecnologia | Whatsapp: (11) 94080-6055 </a>
+				<a class="logo" href="/">Faculdade Nacional de Tecnologia | Whatsapp: (11) 94080-6055 </a>
 				<nav>
 					<a href="#menu">Menu</a>
 				</nav>
@@ -26,11 +26,11 @@
 		<!-- Nav-->
 		<nav id="menu" style="background-color:brown;">
 			<ul class="links">
-				<li><a href="index">Início</a></li>
-				<li><a href="cursos">Cursos</a></li>
-				<li><a href="sobre">Sobre Nós</a></li>
-				<li><a href="contato">Contato</a></li>
-				<li><a href="acesso">Página de Acesso</a></li>
+				<li><a href="/">Início</a></li>
+				<li><a href="/cursos">Cursos</a></li>
+				<li><a href="/sobre">Sobre Nós</a></li>
+				<li><a href="/contato">Contato</a></li>
+				<li><a href="/acesso">Página de Acesso</a></li>
 			</ul>
 		</nav>
 
