--- a/core/templates/curso_jogos.html
+++ b/core/templates/curso_jogos.html
@@ -17,7 +17,7 @@
 
 		<!-- Header-->
 			<header id="header" style="background-color:brown;">
-				<a class="logo" href="index">Fantec - Faculdade de Tecnologia | Whatsapp: (11) 98070-3040</a>
+				<a class="logo" href="/">Fantec - Faculdade de Tecnologia | Whatsapp: (11) 98070-3040</a>
 				<nav>
 					<a href="#menu">Menu</a>
 				</nav>
@@ -26,11 +26,11 @@
 		<!-- Nav-->
 			<nav id="menu" style="background-color:brown;">
 				<ul class="links">
-					<li><a href="index">Início</a></li>
-					<li><a href="cursos">Cursos</a></li>
-					<li><a href="sobre">Sobre Nós</a></li>
-					<li><a href="contato">Contato</a></li>
-					<li><a href="acesso">Página de Acesso</a></li>
+					<li><a href="/">Início</a></li>
+					<li><a href="/cursos">Cursos</a></li>
+					<li><a href="/sobre">Sobre Nós</a></li>
+					<li><a href="/contato">Contato</a></li>
+					<li><a href="/acesso">Página de Acesso</a></li>
 				</ul>
 			</nav>
  
@@ -140,9 +140,9 @@
 					<section>
 						<h4>A Faculdade</h4>
 						<ul class="alt">
-							<li><a href="sobre">Sobre Nós</a></li>
-							<li><a href="contato">Contato</a></li>
-							<li><a href="cursos">Cursos</a></li>
+							<li><a href="/sobre">Sobre Nós</a></li>
+							<li><a href="/contato">Contato</a></li>
+							<li><a href="/cursos">Cursos</a></li>
 						</ul>
 					</section>
 					
