--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -17,7 +17,7 @@
 
 		<!-- Header-->
 			<header id="header" style="background-color:brown;">
-				<a class="logo" href="index">Fantec - Faculdade de Tecnologia | Whatsapp: (11) 98070-3040</a>
+				<a class="logo" href="/">Fantec - Faculdade de Tecnologia | Whatsapp: (11) 98070-3040</a>
 				<nav>
 					<a href="#menu">Menu</a>
 				</nav>
@@ -26,7 +26,7 @@
 		<!-- Nav-->
 			<nav id="menu" style="background-color:brown;">
 				<ul class="links">
-					<li><a href="index">Início</a></li>
+					<li><a href="/">Início</a></li>
 					<li><a href="cursos">Cursos</a></li>
 					<li><a href="sobre">Sobre Nós</a></li>
 					<li><a href="contato">Contato</a></li>
