--- a/core/templates/curso_gestao.html
+++ b/core/templates/curso_gestao.html
@@ -63,7 +63,7 @@
 								<p>O curso de Gestão de Projetos ou Gerenciamento de Projetos é oferecido como pós-graduação ou especialização. O curso forma profissionais com competência para analisar, entender, gerenciar e otimizar as diversas partes de um projeto. </br>No dia a dia do profissional, é comum ter que lidar com as diversas etapas que constituem um projeto, tais como a análise inicial para definir qual o custo total, qual a matéria prima a ser utilizada e o tempo hábil disponível para a execução. </p>
 								<p>É de sua responsabilidade também, fazer alterações no projeto original, supervisionar as equipes de trabalho e entregar o projeto concluído ao cliente, cuidando da documentação necessária.</br> 
 					                        <p>Após a conclusão do curso, o aluno deverá assegurar que os projetos sob sua supervisão cumpram o prazo estabelecido, utilizando os melhores recursos e métodos sem ultrapassar o orçamento. </p>
-								<h3>O mercado de trabalho</h3>
+								<h3> Mercado de trabalho</h3>
 								<p>No mercado de trabalho, devido a versatilidade do profissional de Gestão de Projetos, há ofertas nas mais diversas empresas em que suas habilidades possam ser empregadas. Por isso, é possível encontrar o profissional na construção civil, na indústria automobilística e aeronáutica, em escritórios de arquitetura, agências de publicidade e, até mesmo, em grandes cerimoniais.</p>
 							</div>
 						</div>
