--- a/core/templates/curso_jogos.html
+++ b/core/templates/curso_jogos.html
@@ -66,7 +66,7 @@
 								</header>
 								<p>É a criação e o desenvolvimento de jogos digitais para diferentes mídias, como computador, videogame, celular ou internet. O aluno desenvolve habilidades em programação, design e arte, para produzir jogos de entretenimento, propaganda (advergames), treinamento e capacitação (serious games) educativos, dentre outros. </p>
 								<hr />
-								<h3>O mercado de trabalho</h3>
+								<h3> Mercado de trabalho</h3>
 								<p>Empresas desenvolvedoras de jogos,agências de propaganda e marketing, empresas de treinamento e capacitação e instituições de ensino, na função de:</br></br>-Programador: cria códigos específicos para o desenvolvimento do jogo.</br>-Artista: são modeladores ou animadores. Fazem a arte gráfica 2D e 3D. Cria o personagem, desenvolve a identidade e características dos cenários, detalhes artísticos do jogo.</br>-Game Master: monitora o jogo online, interagindo com os usuários, tirando dúvidas e dando dicas do jogo.</br>-Game Designer: roteirista, pensa no enredo de um jogo, redige a história de fundo do jogo criado, descreve o comportamento dos personagens, desafios, dentre outros.</p>
 							</div>
 						</div>
