--- a/core/templates/curso_adm.html
+++ b/core/templates/curso_adm.html
@@ -65,7 +65,7 @@
 									São funções de um administrador: gerir equipes, negociar com fornecedores, atingir resultados positivos, solucionar diferentes problemas e aumentar a produtividade. <br> </p>
 								<p>Os alunos vivenciam atividades do ambiente corporativo, elaboram planos de negócios e projetos, acompanhados por professores mestres e doutores com experiência empresarial. Também têm acesso a programas de iniciação científica, cursos de idiomas, laboratórios com softwares específicos, intercâmbio internacional, possibilidade de realizar estágio na Empresa Júnior e de participar da Incubadora de empresas. O curso proporciona o desenvolvimento da criatividade, da visão empreendedora e dos conhecimentos para planejar e executar ações estratégicas. </p>
 								<hr />
-								<h3>O Mercado de Trabalho</h3>
+								<h3> Mercado de Trabalho</h3>
 								<p>O mercado de trabalho é amplo, os alunos podem atuar em todos os setores de uma empresa, pois possuem conhecimentos sobre planejamento estratégico, gestão financeira, gerenciamento de produção, marketing e gestão de recursos humanos. Mais de 90% dos alunos do curso trabalham ou realizam estágio.</p>								
 							</div>
 						</div>
