--- a/core/templates/curso_ads.html
+++ b/core/templates/curso_ads.html
@@ -64,7 +64,7 @@
 									Entre os aprendizados desta graduação também estão as etapas do projeto de sistemas de software, como por exemplo: análise, projeto, teste, gestão, implantação e manutenção de sistemas de informação. O aluno formado pela FANTEC pode atuar no mercado de trabalho como: Analista de desenvolvimento, Analista de teste, Analista de requisitos ou de negócios.</p>
 								<p>O curso Superior de Tecnologia em Análise e Desenvolvimento de Sistemas do FANTEC tem duração de 2,5 anos e concede um diploma de nível superior aos seus concluintes, muito reconhecido no mercado de trabalho. O profissional formado em ADS poderá seguir sua formação continuada, ingressando diretamente no bacharelado em Sistemas de Informação, ou buscar novos conhecimentos em cursos de pós-graduação.</p>
 								<hr />
-								<h3>O MERCADO DE TRABALHO</h3>
+								<h3> Mercado de Trabalho</h3>
 								<p>A procura pelos profissionais de Análise e Desenvolvimento de Sistemas no mercado de trabalho está sempre em alta, afinal hoje em dia toda organização tem a necessidade de manter seus sistemas informatizados sempre atualizados.</p>
 								<p>Outros mercados de relevância para o graduado em Análise e Desenvolvimento de Sistemas são das empresas de Tecnologia de Informação (TI), de telecomunicações, do trabalho autônomo, principalmente atuando como desenvolvedor de aplicativos (um mercado ainda em crescimento) e a nova tendência do trabalho remoto (a distância) para corporações internacionais.</p>
 							</div>
