--- a/core/templates/curso_producao.html
+++ b/core/templates/curso_producao.html
@@ -48,7 +48,7 @@
 				<div class="inner">
 					<header class="special">
 						<!--<h2>Rede União Farma Cidade Kemel II</h2>-->
-						<img src="../images/logo_uniao_farma.png" alt="Rede União Farma" />
+						<img src="../../static/images/logo_uniao_farma_inverted.png" alt="Logo Fantec" />
 						<!-- <br/><br/><br/> -->
 						<!-- <p>Confira nossas promoções:</p> -->
 					</header>
