--- a/core/templates/cursos.html
+++ b/core/templates/cursos.html
@@ -110,7 +110,7 @@
 									<a href="curso_gestao"><img src="../static/images/gestao.jpg" alt="Curso de Gestão de Projetos"/></a></br></br>
 									<h3>Gestão de Projetos</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>ERP & Gestão e Qualidade</p>
 								<p><a href="#">Matricule-se Já!</p></a>
 							</div>
 						</section>
@@ -121,7 +121,7 @@
 									<a href="curso_jogos"><img src="../static/images/jogos.jpg" alt="Curso de Jogos Digitais"/></a></br></br>
 									<h3>Jogos Digitais</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>Design de Games e Game Programming</p>
 								<p><a href="#">Matricule-se Já!</p></a>
 							</div>
 						</section>
@@ -134,7 +134,7 @@
 									<a href="curso_producao"><img src="../static/images/producao.jpg" alt="Curso de Produção Miltimídia"/></a></br></br>
 									<h3>Produção Multimídia</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>Web Design, Audiovisual & Design Digital</p>
 								<p><a href="#">Matricule-se Já!</p></a>
 							</div>
 						</section>
@@ -145,7 +145,7 @@
 									<a href="curso_redes"><img src="../static/images/redes.jpg" alt="Curso de Redes de Computadores"/></a></br></br>
 									<h3>Redes de Computadores</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>Iot, Cloud & Infra</p>
 								<p><a href="#">Matricule-se Já!</p></a>
 							</div>
 						</section>
@@ -156,7 +156,7 @@
 									<a href="curso_sistemas"><img src="../static/images/sistemas.jpg" alt="Curso de Sistemas de Informação"/></a></br></br>
 									<h3>Sistemas de Informação</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>Engenharia de Software & Inteligência Artificial</p>
 								<p><a href="#">Matricule-se Já!</p></a>
 							</div>
 						</section>
